Adjusting documentation styles

--- a/site/samples/element.html
+++ b/site/samples/element.html
@@ -1,10 +1,10 @@
-<div class="erb-doc-header">
+<div class="erbsite-doc-header">
 	<h1>Elements (Running example)</h1>
     <a class="erb-return-link" href="#api/element">Return to the reference page</a>
 </div>
 
-<div class="erb-doc-content">
-    <div class="erb-doc-section">
+<div class="erbsite-doc-content">
+    <div class="erbsite-doc-section">
         An ErebusElement can be created using plain HTML in the constructor.  This is useful to create new dynamic content.
         <div id="divSample001"></div>
     </div>
@@ -13,7 +13,7 @@
         element.setParentNode('#divSample001');
     </script>
 
-    <div class="erb-doc-section">
+    <div class="erbsite-doc-section">
         An ErebusElement can be created using a reference to a HTMLElement object.
         <div id="divSample002"></div>
     </div>
@@ -25,7 +25,7 @@
         element.setParentNode('#divSample002');
     </script>
 
-    <div class="erb-doc-section">
+    <div class="erbsite-doc-section">
         An ErebusElement can be created using a the identifier of an existing DOM element.
         <br/>
         The content of a ErebusElement can be changed using a string containing HTML.
