--- a/site/samples/form.html
+++ b/site/samples/form.html
@@ -1,9 +1,9 @@
-<div class="erb-doc-header">
+<div class="erbsite-doc-header">
 	<h1>Forms (Running example)</h1>
-    <a class="erb-return-link" href="#api/form">Return to the reference page</a>
+    <a class="erbsite-return-link" href="#api/form">Return to the reference page</a>
 </div>
 
-<div class="erb-doc-content">
+<div class="erbsite-doc-content">
     <div id="formOne">
         <div>
             <label for="fldFieldRequest">Request ID:</label>
@@ -63,7 +63,7 @@
             <label for="fldFieldDiscount">Negotiated discount %:</label>
             <input type="text" id="fldFieldDiscount" model="discount" format="decimal"/>
         </div>
-        <div class="erb-buttonbar">
+        <div class="erbsite-buttonbar">
             <button onclick="collectForm();">Collect form</button>
             <button onclick="fillForm();">Fill form</button>
             <button onclick="cleanForm();">Clean form</button>
