--- a/site/samples/i18n.html
+++ b/site/samples/i18n.html
@@ -1,29 +1,29 @@
-<div class="erb-doc-header">
+<div class="erbsite-doc-header">
 	<h1>I18n (Running example)</h1>
-    <a class="erb-return-link" href="#api/i18n">Return to the reference page</a>
+    <a class="erbsite-return-link" href="#api/i18n">Return to the reference page</a>
 </div>
 
-<div class="erb-doc-content">
+<div class="erbsite-doc-content">
     <div>Erebus.i18n.getLocale():</div>
     <div id="divGetLocale"></div>
 </div>
 
-<div class="erb-doc-content">
+<div class="erbsite-doc-content">
     <div>Erebus.i18n.getSystemLanguage():</div>
     <div id="divGetSystemLanguage"></div>
 </div>
 
-<div class="erb-doc-content">
+<div class="erbsite-doc-content">
     <div>Erebus.i18n.getLanguage():</div>
     <div id="divGetLanguage"></div>
 </div>
 
-<div class="erb-doc-content">
+<div class="erbsite-doc-content">
     <div>Erebus.i18n.getDateFormat():</div>
     <div id="divGetDateFormat"></div>
 </div>
 
-<div class="erb-doc-content">
+<div class="erbsite-doc-content">
     <div>Erebus.i18n.getDateTimeFormat():</div>
     <div id="divGetDateTimeFormat"></div>
 </div>
