--- a/site/samples/formats.html
+++ b/site/samples/formats.html
@@ -1,15 +1,15 @@
-<div class="erb-doc-header">
+<div class="erbsite-doc-header">
 	<h1>Formats (Running example)</h1>
-    <a class="erb-return-link" href="#api/formats">Return to the reference page</a>
+    <a class="erbsite-return-link" href="#api/formats">Return to the reference page</a>
 </div>
 
-<div id="divSampleContent" class="erb-doc-content">
+<div id="divSampleContent" class="erbsite-doc-content">
 </div>
 
 <script class="text/javascript">
     function renderFormatter(inputValue, formatterCode, formatContainer, deformatContainer) {
         const formatter = Erebus.formats(formatterCode);
-        const table = Erebus.element('<table class="erb-layout-table" style="width: 100%; margin-bottom: 30px;"></table>');
+        const table = Erebus.element('<table class="erbsite-layout-table" style="width: 100%; margin-bottom: 30px;"></table>');
         table.appendChild('<thead><tr><td></td><td style="width: 30%;">Valid Value</td><td style="width: 30%;">Invalid Value<br/>(abcd)</td></tr></thead>');
         const validFormatted = formatter.format(inputValue);
         var invalid = formatter.format('xxx');
