--- a/site/samples/form.html
+++ b/site/samples/form.html
@@ -78,7 +78,7 @@
     
     function collectForm() {
         var values = Erebus.form('formOne').collect();
-        Erebus.element('#divOutputArea').innerHTML = JSON.stringify(values);
+        Erebus.$('#divOutputArea').innerHTML = JSON.stringify(values);
     }
 
     function fillForm() {
