--- a/site/samples/i18n.html
+++ b/site/samples/i18n.html
@@ -29,9 +29,9 @@
 </div>
 
 <script class="text/javascript">
-    Erebus.element('#divGetLocale').innerHTML = Erebus.i18n.getLocale();
-    Erebus.element('#divGetSystemLanguage').innerHTML = Erebus.i18n.getSystemLanguage();
-    Erebus.element('#divGetLanguage').innerHTML = Erebus.i18n.getLanguage();
-    Erebus.element('#divGetDateFormat').innerHTML = Erebus.i18n.getDateFormat();
-    Erebus.element('#divGetDateTimeFormat').innerHTML = Erebus.i18n.getDateTimeFormat();
+    Erebus.$('#divGetLocale').innerHTML = Erebus.i18n.getLocale();
+    Erebus.$('#divGetSystemLanguage').innerHTML = Erebus.i18n.getSystemLanguage();
+    Erebus.$('#divGetLanguage').innerHTML = Erebus.i18n.getLanguage();
+    Erebus.$('#divGetDateFormat').innerHTML = Erebus.i18n.getDateFormat();
+    Erebus.$('#divGetDateTimeFormat').innerHTML = Erebus.i18n.getDateTimeFormat();
 </script>
